catkin_w_s/logs/quadcopter_perception/build.make.004.log.stderr
/home/subho/catkin_w_s/src/quadcopter_perception/src/scripts/manual_controller.cpp: In function ‘int main(int, char**)’:
/home/subho/catkin_w_s/src/quadcopter_perception/src/scripts/manual_controller.cpp:27:83: error: invalid use of ‘this’ in non-member function
   27 |     Subscriber state_sub = nh.subscribe(state_sub_topic, 10, &Offboard::state_cb, this);
      |                                                                                   ^~~~
/home/subho/catkin_w_s/src/quadcopter_perception/src/scripts/manual_controller.cpp:45:12: error: ‘getch’ was not declared in this scope; did you mean ‘getc’?
   45 |     switch(getch()) {
      |            ^~~~~
      |            getc
make[2]: *** [CMakeFiles/manual_controller.dir/build.make:63: CMakeFiles/manual_controller.dir/src/scripts/manual_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:292: CMakeFiles/manual_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
